<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Geek Zone Membership</string>
    <string name="title_main">Geek Zone UK events</string>
    <string name="title_latest_news">Latest News</string>
    <string name="text_latest_news">Geek Zone UK latest News</string>
    <string name="title_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="notification_header">Push Notifications</string>

    <!-- Notification Preferences -->
    <string name="push_notification_header">Push Notifications</string>
    <string name="notification_subs_title">Subscribe</string>
    <string name="subscription_title">Subscription</string>
    <string name="notification_subscribed">Subscribed</string>
    <string name="notification_unsubscribed">Unsubcribed</string>
    <string name="celmsford_geekzone_events_title">Geek Zone Chelmsford Events</string>
    <string name="coventry_geekzone_events_title">Geek Zone Coventry Events</string>
    <string name="london_geekzone_events_title">Geek Zone London Events</string>
    <string name="title_drawer_menu_logout">Logout</string>
    <string name="title_drawer_menu_latest_news">Latest news</string>
    <string name="title_drawer_menu_events">Events</string>
    <string name="title_drawer_section_controls">Constrols</string>
    <string name="title_drawer_menu_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="progress_bar_loading">Loading …</string>
    <string name="toast_error_message">Loading error …</string>
    <string name="logout_text">Logout</string>
    <string name="image_descr_event_item_icon">Event item icon</string>
    <string name="event_title_default_text_1">Line 1</string>
    <string name="event_title_default_text_2">Line 2</string>
    <string name="title_events">GZ UK Events</string>
    <string name="title_logout">Logout</string>
    <string name="title_event">Event details</string>
    <string name="exit_warning_alert_dialog_yes">Do you want to exit?</string>
    <string name="exit_warning_alert_option_yes">yes</string>
    <string name="exit_warning_alert_option_no">no</string>
    <string name="exit_message_text">Exit</string>
    <string name="geek_zone_uk_splash_text">Geek.Zone UK</string>
</resources>