<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/events"
            android:title="@string/title_drawer_menu_events"
            android:icon="@drawable/ic_action_events" />

        <item
            android:id="@+id/news"
            android:title="@string/title_drawer_menu_latest_news"
            android:icon="@drawable/ic_action_news" />

    </group>

    <item android:title="@string/title_drawer_section_controls">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/title_drawer_menu_settings"
                android:icon="@drawable/ic_action_settings"/>

            <item
                android:id="@+id/logout"
                android:title="@string/title_drawer_menu_logout"
                android:icon="@drawable/ic_action_news" />
        </menu>
    </item>

</menu>