<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    style="@style/CardView.RssStyle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp">
        <ImageView
            android:id="@+id/event_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image_descr_event_item_icon" />

        <TextView
            android:id="@+id/event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_title_default_text_1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/event_icon" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_title_default_text_2"
            android:textSize="15sp"
            android:layout_below="@id/event_title"
            android:layout_toEndOf="@id/event_icon"
            android:layout_marginStart="8dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>